manifests/drupal/drupal.yml
# This manifest assumes 'drupal' namespace is already present:
#
#   kubectl create namespace drupal
#
# Apply the manifest with:
#
#   kubectl apply -f drupal.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drupal
  namespace: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - name: drupal
          image: 'drupal:8.8-apache'
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
          readinessProbe:
            tpSocket:
              port: 80
            initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /var/www/html/sites/default/
              name: drupal-settings
            - mountPath: /var/www/html/sites/default/files/
              name: drupal-files
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
      volumes:
        - name: drupal-settings
          configMap:
            name: drupal-config
        - name: drupal-files
          persistentVolumeClaim:
            claimName: drupal-files-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: drupal
  namespace: drupal
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: drupal

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal
  namespace: drupal
spec:
  rules:
    - host: drupal.10.0.100.99.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: drupal
              servicePort: 80c
